--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7"
   }
