--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
+    "axios-mock-adapter": "^1.20.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7"
   }
